tests/build/cases/property/invalid_priority.stderr
error: expected one of: `context`, `event`, `layout`, `size`, `inner`, `capture_only`
 --> cases/property/invalid_priority.rs:3:12
  |
3 | #[property(invalid)]
  |            ^^^^^^^
